Made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -35,16 +35,16 @@
             <option value="some high school">Some High School</option>
             <option value="high school">High School</option>
             <option value="some college">Some College</option>
-            <option value="associates degree">Associate's Degree</option>
-            <option value="bachelors degree">Bachelor's Degree</option>
-            <option value="masters degree">Master's Degree</option>
+            <option value="associate's degree">Associate's Degree</option>
+            <option value="bachelor's degree">Bachelor's Degree</option>
+            <option value="master's degree">Master's Degree</option>
         </select><br /><br />
 
         <label for="lunch">Lunch *</label><br />
         <select id="lunch" name="lunch" required>
             <option value="">Select Lunch Type</option>
             <option value="standard">Standard</option>
-            <option value="free-reduced">Free/Reduced</option>
+            <option value="free/reduced">Free/Reduced</option>
         </select><br /><br />
 
         <label for="test_preparation_course">Test Preparation Course *</label><br />
